--- a/index.html
+++ b/index.html
@@ -35,24 +35,25 @@
 			<a href="/"><div class="b-main-menu__logo b-main-menu__logo_left"></div></a>
 			<div class="b-main-menu__center">
 				<div class="b-heading b-heading_main">
-					<a href="/"><h1 class="">INVADEX</h1></a>
+					<a href="/"><h1 class="logo">INVADEX</h1></a>
 				</div>
 				<nav id="transparent">
 
 
 
-					<ul >   
+					<ul>   
+						<div id="navbar">
 
-						<li ><a href="#About" onclick="goTo(this);">About Us</a></li>
+						<div><li ><a href="#About" onclick="goTo(this);">About Us</a></li></div>
 
-						<li ><a href="#Products"  onclick="goTo(this);">Products</a></li>
+							<div><li ><a href="#Products"  onclick="goTo(this);">Products</a></li></div>
 
-						<li ><a href="#Testimonials" onclick="goTo(this);">Testimonials</a></li>
+						<div><li ><a href="#Testimonials" onclick="goTo(this);">Testimonials</a></li></div>
 
-						<li ><a href="#Team" onclick="goTo(this);">Team</a></li>
+						<div><li ><a href="#Team" onclick="goTo(this);">Team</a></li></div>
 
-						<li ><a href="#Contact" onclick="goTo(this);">Contact</a></li>
-
+						<div><li ><a href="#Contact" onclick="goTo(this);">Contact</a></li></div>
+</div>
 					</ul>
 
 
@@ -65,7 +66,12 @@
 		<!--begin b-slogan-->
 
 		<div class="b-slogan">
-			<a class="b-slogan__button-play" href="https://www.youtube.com/watch?v=n0F6hSpxaFc"></a>
+			<a  href="https://www.youtube.com/watch?v=n0F6hSpxaFc"><svg version="1.1" id="play" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" height="100px" width="100px"
+				viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
+				<path class="stroke-solid" fill="none" stroke="#ddbe72"  d="M49.9,2.5C23.6,2.8,2.1,24.4,2.5,50.4C2.9,76.5,24.7,98,50.3,97.5c26.4-0.6,47.4-21.8,47.2-47.7
+				C97.3,23.7,75.7,2.3,49.9,2.5"/>
+				<path class="icon" fill="#ddbe72" d="M38,69c-1,0.5-1.8,0-1.8-1.1V32.1c0-1.1,0.8-1.6,1.8-1.1l34,18c1,0.5,1,1.4,0,1.9L38,69z"/>
+			</svg></a>
 		</div>
 	</div>
 </header>
